--- a/.editorconfig
+++ b/.editorconfig
@@ -10,3 +10,8 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = tab
 indent_size = 2
+
+[*.{css,scss}]
+indent_style = space
+indent_size = 4
+
