--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-bower": "0.0.11",
     "gulp-concat": "^2.6.0",
+    "gulp-debug": "^2.1.2",
     "gulp-imagemin": "^2.4.0",
     "gulp-load-plugins": "^1.1.0",
     "gulp-minify-css": "^1.2.2",
